Eighball app completed with random answer feature

--- a/EightBall/app/src/main/res/values/strings.xml
+++ b/EightBall/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EightBall</string>
+    <string name="question">Ask a question</string>
+    <string name="btn_shake">Shake Me !</string>
 </resources>
