--- a/TopMovies/app/src/main/res/values/strings.xml
+++ b/TopMovies/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Top Movies</string>
+    <string name="preference_file_key">FAVOURITES</string>
 </resources>
