--- a/proActiveSchedulerApp/app/src/main/res/values/strings.xml
+++ b/proActiveSchedulerApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="heading_home_text">Focus Today:</string>
+    <string name="dateTextId">dateTextId</string>
 </resources>
