--- a/proActiveScheduler/app/src/main/res/values/strings.xml
+++ b/proActiveScheduler/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">proActiveScheduler</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Developer Contact</string>
+    <string name="nav_header_subtitle">joe.manuel@numerounoapps.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="heading_home_text">Focus Today:</string>
+    <string name="dateTextId">dateTextId</string>
 </resources>
