--- a/proActiveTaskScheduler/app/src/main/res/values/strings.xml
+++ b/proActiveTaskScheduler/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="heading_home_text">Focus Today:</string>
     <string name="dateTextId">dateTextId</string>
+    <string name="listViewText">Tasks</string>
+    <string name="taskCompletedbtn">Done!</string>
 </resources>
