final commit after mvp done,for the ppt

--- a/proActiveTaskScheduler/app/src/main/res/values/strings.xml
+++ b/proActiveTaskScheduler/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">pro Active Task Scheduler</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Tasks Dashboard</string>
-    <string name="title_calenderview">Tasks Calender View</string>
+    <string name="title_calenderview">Calender View</string>
     <string name="heading_home_text">Focus Today:</string>
     <string name="dateTextId">dateTextId</string>
     <string name="listViewText">Tasks</string>
     <string name="taskCompletedbtn">Done!</string>
+    <string name="add_new_task1">Add New Task</string>
+    <string name="add_new_task2">Add priority</string>
 </resources>
